crates/bind/tests/compile_fail/missing_binds.stderr
error: missing `#[binds(Marker)]`
 --> tests/compile_fail/missing_binds.rs:5:1
  |
5 | #[bind(Keyboard("g") => noop)]
  | ^
